form validation added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1188,3 +1188,12 @@ section .container {
 .credits a:hover {
   color: #fff;
 }
+
+.form-group span{
+  position: absolute;
+  bottom: 12px;
+  right: 17px;
+  font-size: 14px;
+  color:#ed3c0d;
+
+}
